RESOLVED FIXED75867
Compilation errors on build-webkit --debug --no-video --no-fullscreen-api on mac.
https://bugs.webkit.org/show_bug.cgi?id=75867
Summary Compilation errors on build-webkit --debug --no-video --no-fullscreen-api on ...
Pablo Flouret
Reported 2012-01-09 10:48:00 PST
Compilation errors on build-webkit --debug --no-video --no-fullscreen-api on mac.
Attachments
proposed patch (6.68 KB, patch)
2012-01-09 10:49 PST, Pablo Flouret
no flags
don't enable video-track on gtk or blackberry by default (6.60 KB, patch)
2012-01-09 11:30 PST, Pablo Flouret
no flags
leave out --no-fullscreen issues. (8.10 KB, patch)
2012-01-10 14:27 PST, Pablo Flouret
no flags
fixes from review comments (8.94 KB, patch)
2012-01-13 10:41 PST, Pablo Flouret
no flags
Pablo Flouret
Comment 1 2012-01-09 10:49:59 PST
Created attachment 121686 [details] proposed patch
Gustavo Noronha (kov)
Comment 2 2012-01-09 10:58:36 PST
Comment on attachment 121686 [details] proposed patch Attachment 121686 [details] did not pass gtk-ews (gtk): Output: http://queues.webkit.org/results/11184590
Pablo Flouret
Comment 3 2012-01-09 11:30:25 PST
Created attachment 121701 [details] don't enable video-track on gtk or blackberry by default
Philippe Normand
Comment 4 2012-01-10 00:31:01 PST
Comment on attachment 121701 [details] don't enable video-track on gtk or blackberry by default View in context: https://bugs.webkit.org/attachment.cgi?id=121701&action=review > Source/JavaScriptCore/wtf/Platform.h:546 > +#if defined(ENABLE_VIDEO) > +#define ENABLE_FULLSCREEN_API 1 This is wrong I think. The FullScreen API allows about any HTML element to request full screen display.
Philippe Normand
Comment 5 2012-01-10 00:32:08 PST
What errors do you get exactly?
Pablo Flouret
Comment 6 2012-01-10 14:24:06 PST
My bad, i thought fullscreen depended on video since i usually heard mention of it in that context, i'll just fix the --no-video issues in this bug.
Pablo Flouret
Comment 7 2012-01-10 14:27:05 PST
Created attachment 121911 [details] leave out --no-fullscreen issues.
Philippe Normand
Comment 8 2012-01-11 00:36:25 PST
Comment on attachment 121911 [details] leave out --no-fullscreen issues. View in context: https://bugs.webkit.org/attachment.cgi?id=121911&action=review Can you please elaborate the ChangeLog entries instead of copy/pasting the same message? > Source/WebCore/rendering/RenderThemeMac.h:176 > -#endif > - > virtual bool shouldShowPlaceholderWhenFocused() const; > +#endif I might be wrong here, but I think this method was added under the wrong guard in the first place. It's used only in the HTMLTextFormControlElement from what I can tell, which has nothing to do with VIDEO. > Source/WebKit/mac/WebCoreSupport/WebChromeClient.mm:947 > +void WebChromeClient::fullScreenRendererChanged(RenderBox* renderer) This method should not be under VIDEO, it is guarded by FULLSCREEN_API in ChromeClient.h.
Pablo Flouret
Comment 9 2012-01-13 10:41:13 PST
Created attachment 122453 [details] fixes from review comments
WebKit Review Bot
Comment 10 2012-01-15 12:14:47 PST
Comment on attachment 122453 [details] fixes from review comments Clearing flags on attachment: 122453 Committed r105032: <http://trac.webkit.org/changeset/105032>
WebKit Review Bot
Comment 11 2012-01-15 12:14:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.