Fix compilation errors on build-webkit --debug --no-video on mac. https://bugs.webkit.org/show_bug.cgi?id=75867

Patch by Pablo Flouret <pablof@motorola.com> on 2012-01-15
Reviewed by Philippe Normand.

Source/JavaScriptCore:

Make ENABLE_VIDEO_TRACK conditional on ENABLE_VIDEO, video track feature
doesn't build without video.

* wtf/Platform.h:

Source/WebCore:

- Some exported HTMLMediaElement symbols were guarded by FULLSCREEN_API
  feature instead of VIDEO.
- Unused parameter warning in CanvasRenderingContext::wouldTaintOrigin().
- RenderThemeMac::shouldShowPlaceholderWhenFocused() implementation
  wrongly guarded by VIDEO feature.

* WebCore.exp.in:
* html/canvas/CanvasRenderingContext.cpp:
(WebCore::CanvasRenderingContext::wouldTaintOrigin):
* rendering/RenderThemeMac.mm:

Source/WebKit/mac:

- WebChromeClient::fullScreenRendererChanged() declaration wrongly guarded
  by VIDEO feature instead of FULLSCREEN_API.
- _isAnyMoviePlaying implementation depends on VIDEO.

* WebCoreSupport/WebChromeClient.h:
* WebView/WebFullScreenController.mm:
(-[WebFullScreenController _isAnyMoviePlaying]):

Tools:

Add --[no-]video-track to build-webkit, since video track feature
depends on video.

* Scripts/build-webkit:

Canonical link: https://commits.webkit.org/93165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105032 268f45cc-cd09-0410-ab3c-d52691b4dbfc